fix:  Sentence not aligned in the space suggestor - EXO-67765 (#24)
This change will adjust the identity suggester display

--- a/web/eXoSkin/src/main/webapp/skin/less/social/skin/CommonComponents/Style.less
+++ b/web/eXoSkin/src/main/webapp/skin/less/social/skin/CommonComponents/Style.less
@@ -36,7 +36,7 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
     }
 
     .v-select__selections {
-      display: block !important;
+      display: flex !important;
       max-width: 100%;
       padding-left: 10px;
     }
